--- a/src/styles/_todoList.scss
+++ b/src/styles/_todoList.scss
@@ -9,7 +9,7 @@
     padding:20px 20px 10px 20px;
     margin-top:30px;
 }
-h1{
+h3{
     background-color:#F4FCE8;   
     margin:2;
     text-align:center;
@@ -20,17 +20,36 @@ h1{
     background-color:#F4FCE8;   
     margin:0 -20px -10px -20px;
     padding: 10px 20px;
+    
 }
 button{
-    
     text-align: center;
+    &:focus {
+        outline: none !important; 
+    }
 }
 
-// #done-items li{
-//     padding:10px 0;
-//     border-bottom:1px solid #ddd;
-//     text-decoration:line-through;
-// }
-// #done-items li:last-child{
-//     border-bottom:none;
-// }
+.error_msg {
+    color: red;
+}
+.table td, .table th {
+     padding: 0 !important;
+     height: 2px !important;
+     font-size: 12px;   
+}
+
+
+.checkBox{
+    >span {
+        > svg {
+            width: 15px !important;
+            height: 18px !important;
+            
+        }
+    }
+    
+}
+.delete_btn{
+    
+    padding: 5px !important;
+}
