Complete todo App

--- a/src/assets/styles/0-header/_header.scss
+++ b/src/assets/styles/0-header/_header.scss
@@ -1,5 +1,5 @@
 .h3{
-      background-color:#F4FCE8;  
+      background-color: $ligth-header-background;  
       text-align:center !important;
       margin: 2px;
 }
